@@ -43,9 +43,9 @@ import static com.hbm.inventory.OreDictManager.*;
 public class CrystallizerRecipes extends SerializableRecipe {
 
 	//'Object' is either a ComparableStack or the key for the ore dict
-	private static HashMap<Tuple.Pair<Object, FluidType>, CrystallizerRecipe> recipes = new HashMap();
-	private static HashMap<Object, Integer> amounts = new HashMap(); // for use in the partitioner
-	private static List<CrystallizerRecipe> jeiCrystalRecipes = null;
+	private static final HashMap<Tuple.Pair<Object, FluidType>, CrystallizerRecipe> recipes = new HashMap<>();
+	private static final HashMap<Object, Integer> amounts = new HashMap<>(); // for use in the partitioner
+	private static final List<CrystallizerRecipe> jeiCrystalRecipes = null;
 	@Override
 	public void registerDefaults() {
 		final int baseTime = 600;
@@ -113,6 +113,7 @@ public class CrystallizerRecipes extends SerializableRecipe {
 		registerRecipe(CD.dust(),										new CrystallizerRecipe(ModItems.ingot_rubber, utilityTime), new FluidStack(Fluids.FISHOIL, 250));
 		registerRecipe(LATEX.ingot(),									new CrystallizerRecipe(ModItems.ingot_rubber, mixingTime).prod(0.15F), new FluidStack(Fluids.SOURGAS, 25));
 		registerRecipe(new ComparableStack(ModItems.powder_sawdust),	new CrystallizerRecipe(ModItems.cordite, mixingTime).prod(0.25F), new FluidStack(Fluids.NITROGLYCERIN, 250));
+        registerRecipe(new ComparableStack(ModBlocks.rebar),			new CrystallizerRecipe(ModBlocks.concrete_rebar, 10), new FluidStack(Fluids.CONCRETE, 1_000));
 
 		registerRecipe(new ComparableStack(ModItems.meteorite_sword_treated),	new CrystallizerRecipe(ModItems.meteorite_sword_etched, baseTime));
 		registerRecipe(new ComparableStack(ModItems.powder_impure_osmiridium),	new CrystallizerRecipe(ModItems.crystal_osmiridium, baseTime), new FluidStack(Fluids.SCHRABIDIC, 1_000));
@@ -196,7 +197,7 @@ public class CrystallizerRecipes extends SerializableRecipe {
 		/// COMPAT CERTUS QUARTZ ///
 		List<ItemStack> quartz = OreDictionary.getOres("crystalCertusQuartz");
 		if(quartz != null && !quartz.isEmpty()) {
-			ItemStack qItem = quartz.get(0).copy();
+			ItemStack qItem = quartz.getFirst().copy();
 			qItem.setCount(12);
 			registerRecipe("oreCertusQuartz", new CrystallizerRecipe(qItem, baseTime));
 		}
@@ -206,6 +207,14 @@ public class CrystallizerRecipes extends SerializableRecipe {
 		if(dustWhitePhosphorus != null && !dustWhitePhosphorus.isEmpty()) {
 			registerRecipe(P_WHITE.dust(), new CrystallizerRecipe(new ItemStack(ModItems.ingot_phosphorus), utilityTime), new FluidStack(Fluids.AROMATICS, 50));
 		}
+
+        /// COMPAT CINNABAR DUST ///
+        List<ItemStack> dustCinnabar = OreDictionary.getOres(CINNABAR.dust());
+        if(dustCinnabar != null && !dustCinnabar.isEmpty()) {
+            registerRecipe(CINNABAR.dust(), new CrystallizerRecipe(new ItemStack(ModItems.cinnabar), utilityTime), new FluidStack(Fluids.PEROXIDE, 50));
+        }
+
+        registerRecipe(new ComparableStack(ModBlocks.moon_turf), new CrystallizerRecipe(new ItemStack(ModItems.chunk_ore, 1, ItemEnums.EnumChunkType.MOONSTONE.ordinal()), 1200).setReq(16));
 	}
 
 	public static CrystallizerRecipe getOutput(ItemStack stack, FluidType type) {
@@ -214,14 +223,14 @@ public class CrystallizerRecipes extends SerializableRecipe {
 			return null;
 
 		ComparableStack comp = new ComparableStack(stack.getItem(), 1, stack.getItemDamage());
-		Tuple.Pair compKey = new Tuple.Pair(comp, type);
+		Tuple.Pair<ComparableStack, FluidType> compKey = new Tuple.Pair<>(comp, type);
 
 		if(recipes.containsKey(compKey)) return recipes.get(compKey);
 
 		String[] dictKeys = comp.getDictKeys();
 
 		for(String key : dictKeys) {
-			Tuple.Pair dictKey = new Tuple.Pair(key, type);
+			Tuple.Pair<String, FluidType> dictKey = new Tuple.Pair<>(key, type);
 			if(recipes.containsKey(dictKey)) return recipes.get(dictKey);
 		}
 
@@ -233,7 +242,7 @@ public class CrystallizerRecipes extends SerializableRecipe {
 
 	public static int getAmount(ItemStack stack) {
 
-		if(stack == null || stack.isEmpty() || stack.getItem() == null)
+		if(stack == null || stack.isEmpty() || stack.getItem() == Items.AIR)
 			return 0;
 
 		ComparableStack comp = new ComparableStack(stack.getItem(), 1, stack.getItemDamage());
@@ -270,7 +279,7 @@ public class CrystallizerRecipes extends SerializableRecipe {
 				ComparableStack stack = ((ComparableStack) input);
 				stack = (ComparableStack) stack.copy();
 				stack.stacksize = recipe.itemAmount;
-				//if(stack.item == ModItems.scrap_plastic) continue;
+				if(stack.item == ModItems.scrap_plastic) continue;
 				recipes.put(new Object[] {ItemFluidIcon.make(acid, recipe.acidAmount), stack}, recipe.output);
 			}
 		}
@@ -284,7 +293,7 @@ public class CrystallizerRecipes extends SerializableRecipe {
 
 	public static void registerRecipe(Object input, CrystallizerRecipe recipe, FluidStack stack) {
 		recipe.acidAmount = stack.fill;
-		recipes.put(new Tuple.Pair(input, stack.type), recipe);
+		recipes.put(new Tuple.Pair<>(input, stack.type), recipe);
 		amounts.put(input, recipe.itemAmount);
 	}
 
@@ -329,18 +338,18 @@ public class CrystallizerRecipes extends SerializableRecipe {
 	public void readRecipe(JsonElement recipe) {
 		JsonObject obj = (JsonObject) recipe;
 
-		ItemStack output = this.readItemStack(obj.get("output").getAsJsonArray());
-		RecipesCommon.AStack input = this.readAStack(obj.get("input").getAsJsonArray());
-		FluidStack fluid = this.readFluidStack(obj.get("fluid").getAsJsonArray());
+		ItemStack output = readItemStack(obj.get("output").getAsJsonArray());
+		RecipesCommon.AStack input = readAStack(obj.get("input").getAsJsonArray());
+		FluidStack fluid = readFluidStack(obj.get("fluid").getAsJsonArray());
 		int duration = obj.get("duration").getAsInt();
 
 		CrystallizerRecipe cRecipe = new CrystallizerRecipe(output, duration).setReq(input.stacksize);
 		input.stacksize = 1;
 		cRecipe.acidAmount = fluid.fill;
 		if(input instanceof ComparableStack) {
-			recipes.put(new Tuple.Pair(((ComparableStack) input), fluid.type), cRecipe);
+			recipes.put(new Tuple.Pair<>(input, fluid.type), cRecipe);
 		} else if(input instanceof RecipesCommon.OreDictStack) {
-			recipes.put(new Tuple.Pair(((RecipesCommon.OreDictStack) input).name, fluid.type), cRecipe);
+			recipes.put(new Tuple.Pair<>(((RecipesCommon.OreDictStack) input).name, fluid.type), cRecipe);
 		}
 	}
 
@@ -355,11 +364,11 @@ public class CrystallizerRecipes extends SerializableRecipe {
 
 		writer.name("duration").value(cRecipe.duration);
 		writer.name("fluid");
-		this.writeFluidStack(fluid, writer);
+		writeFluidStack(fluid, writer);
 		writer.name("input");
-		this.writeAStack(input, writer);
+		writeAStack(input, writer);
 		writer.name("output");
-		this.writeItemStack(cRecipe.output, writer);
+		writeItemStack(cRecipe.output, writer);
 	}
 
 	@Override
